[package]
name = "wildptr"
version = "0.1.0"
authors = ["harry"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.1"
tokio = { version = "1.2.0", features = ["rt-multi-thread"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
