[package]
name = "wildptr"
version = "0.1.0"
authors = ["harry"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.1", features = ["blocking"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
substring = "1.4.5"
